# behaviour-planning-case-studies

./: .gitignore  README.md
linux-exploit-chains/code/: README.md  analysis.py  main.py  requirements.txt  utilities.py
linux-exploit-chains/code/chain-domain/: domain.pddl
model-counting-thesis-example/: build.sh  statistics_100_fbi_smt_generated_plans.json  statistics_100_fi_generated_plans.json
model-counting-thesis-example/code/: main.py  utilities.py
model-counting-thesis-example/results/: k_1000_0_statistics_fbi_smt_generated_plans.json  k_1000_1_statistics_fbi_smt_generated_plans.json
smb-diversity-eval-gb/: build.sh
smb-diversity-eval-gb/code/: behaviour_space.py  env_case_study.py  generate-slurm.py  main.py  planner.py  utilities.py
smb-diversity-eval-gb/renders-pdf/: luigi_plans_behaviours.json  mario_plans_behaviours.json
smb-diversity-eval-pcg/: build.sh
smb-diversity-eval-pcg/code/levels/: lvl-0.txt  lvl-1.txt
smb-diversity-eval/code/: main.py
smb-diversity-eval/code/agents/: fbi.py  utilities.py
smb-diversity-eval/code/levels/: lvl-0.txt
storytelling/code/: README.md  generate-benchmark-slurm-tasks.py  init-benchmark.sh  run-benchmark.py  setup.sh  utilities.py
storytelling/code/dev/: dev-compilers.py  (+2 more)
storytelling/old-stuff/code/behaviour_space_dims/: README.md  pyproject.toml
storytelling/old-stuff/code/behaviour_space_dims/storytelling_bspace_dims/: possible_endings.py
storytelling/results/: storydomains-results.csv
urban-planning/: build.sh
urban-planning/code/: behaviour_space_dimensions.py  main.py  utilities.py
(+100 files in other folders)
