[tool.poetry]
name = "storytelling_bspace_dims"
version = "0.1.0"
description = "Behaviour space dimensions for storytelling applications (SMT based)"
authors = ["MFaisalZaki <mustafa.faisal.eng@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
z3-solver = "^4.13.0.0"
lark = "^1.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
